// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridStart renders 0 1`] = `
Array [
  .c0 {
  grid-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders function 1`] = `
Array [
  .c0 {
  grid-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders negative number 1`] = `
Array [
  .c0 {
  grid-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-start: July;
}

@media May {
  .c0 {
    grid-start: August;
  }
}

@media April {
  .c0 {
    grid-start: September;
  }
}

@media January {
  .c0 {
    grid-start: November;
  }
}

@media April {
  .c0 {
    grid-start: August;
  }
}

@media June {
  .c0 {
    grid-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-start: July;
}

@media May {
  .c0 {
    grid-start: August;
  }
}

@media April {
  .c0 {
    grid-start: September;
  }
}

@media January {
  .c0 {
    grid-start: November;
  }
}

@media April {
  .c0 {
    grid-start: August;
  }
}

@media June {
  .c0 {
    grid-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-start: November;
  }
}

@media April {
  .c0 {
    grid-start: January;
  }
}

@media January {
  .c0 {
    grid-start: December;
  }
}

@media April {
  .c0 {
    grid-start: April;
  }
}

@media June {
  .c0 {
    grid-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-start: November;
  }
}

@media April {
  .c0 {
    grid-start: January;
  }
}

@media January {
  .c0 {
    grid-start: December;
  }
}

@media April {
  .c0 {
    grid-start: April;
  }
}

@media June {
  .c0 {
    grid-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-start: July;
  }
}

@media April {
  .c0 {
    grid-start: August;
  }
}

@media January {
  .c0 {
    grid-start: September;
  }
}

@media April {
  .c0 {
    grid-start: November;
  }
}

@media June {
  .c0 {
    grid-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-start: July;
  }
}

@media April {
  .c0 {
    grid-start: August;
  }
}

@media January {
  .c0 {
    grid-start: September;
  }
}

@media April {
  .c0 {
    grid-start: November;
  }
}

@media June {
  .c0 {
    grid-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-start: January;
  }
}

@media April {
  .c0 {
    grid-start: December;
  }
}

@media January {
  .c0 {
    grid-start: April;
  }
}

@media April {
  .c0 {
    grid-start: May;
  }
}

@media June {
  .c0 {
    grid-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-start: January;
  }
}

@media April {
  .c0 {
    grid-start: December;
  }
}

@media January {
  .c0 {
    grid-start: April;
  }
}

@media April {
  .c0 {
    grid-start: May;
  }
}

@media June {
  .c0 {
    grid-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders postitive number 1`] = `
Array [
  .c0 {
  grid-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders string 1`] = `
Array [
  .c0 {
  grid-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridStart renders valid theme path 1`] = `
Array [
  .c0 {
  grid-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
